# robertodr.github.io

./: .gitignore  404.html  CNAME  README.md  _config.yml  about.html  archive.html  atom.xml  contact.html  index.html  keybase.txt  readme.markdown  stack.yaml  totaltrash-xyz.cabal  totaltrash.cabal
_data/: navigation.yml
_posts/: 2015-12-13-test-post.md  2016-04-27-welcome.md  2016-05-19-sow20_2016.md  2016-05-27-sow21_2016.md  2017-03-10-sow10_2017.md  2017-06-08-turn-on-compiler-warnings.md  2017-07-11-install-nixos.md  2017-07-13-test-post.md
about/: index.html  index.md
css/: default.css  highlight.css  screen.css
currently/: index.html  index.md
cv/: index.md
docs/: CNAME  about.html  books.html  cv.html  index.html  keybase.txt  movies.html  music.html  robots.txt  rss  sitemap.xml
docs/blog/: branching-models.html  docker-images.html  getkw-01.html  install-nixos.html  nix-rust-python.html  plots-with-altair.html  sow10_2017.html  sow20_2016.html  sow21_2016.html  the-n-th-time-is-the-charm.html  turn-on-compiler-warnings.html  welcome.html
notes/: index.html
notes/install-nixos/: index.html
notes/test-note/: index.html
posts/: 2012-08-12-spqr.html  2012-10-07-rosa-rosa-rosam.html  2012-11-28-carpe-diem.html  2012-12-07-tu-quoque.html
posts/sow10_2017/: index.html
posts/sow20_2016/: index.html
posts/sow21_2016/: index.html
posts/test-post/: index.html
posts/turn-on-compiler-warnings/: index.html
provider/: sitemap.xml
reads/: index.html  index.md
src/: Site.hs  deploy.sh
src/Site/: Contexts.hs
work/: index.html  index.md
(+40 files in other folders)
