name:             totaltrash-xyz
version:          1.0
synopsis:         Personal Site
homepage:         https://totaltrash.xyz
license:          BSD3
author:           Roberto Di Remigio
maintainer:       roberto.diremigio@gmail.com
category:         Web
build-type:       Custom
cabal-version:    >=1.8

executable site
  hs-source-dirs: src/
  main-is:        Site.hs
  ghc-options:    -O2 -Wall -threaded
  build-depends:  base         == 4.*
               ,  hakyll       >= 4.4.3.2
               ,  filepath     >= 1.3.0.2
               ,  process      >= 1.2.0.0
               ,  old-locale   >= 1.0.0.6
               ,  time         >= 1.4.2
               ,  blaze-html   >= 0.8.0.2
               ,  containers   >= 0.5.5.1
               ,  pandoc       >= 1.13.2
               ,  pandoc-types >= 1.12.4.2
               ,  utf8-string  >= 1 
               ,  regex-tdfa   >= 1.2.0
               ,  regex-compat-tdfa >= 0.95.1.4
               ,  io-streams   >= 1.1.2.2
               ,  text         >= 1.2.0.4
               ,  transformers >= 0.3.0.0
               ,  stm          >= 2.4.4
               ,  bytestring   >= 0.10.4.0
               ,  websockets   >= 0.8.1.1
